fix: correct album and songs covers position

--- a/client/src/styles/homeMenus.css
+++ b/client/src/styles/homeMenus.css
@@ -65,7 +65,7 @@ body {
     width: 100%;
     height: 100vh;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
     overflow-x: auto;
@@ -74,8 +74,11 @@ body {
       width: 100px;
       height: 100px;
       object-fit: cover;
-      display: inline-block;
-      margin-left: 30%;
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      align-items: center;
+      margin-left: 140vw;
     }
 
     .menu-albums-songs {
